# ChunkCanvas

./: .gitignore  README.md  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run_vllm.sh
app/: globals.css  layout.tsx  page.tsx
app/api/add/: route.ts
app/components/: EnvLoader.tsx  ThemeProvider.tsx
app/components/chunking/: ChunkActions.tsx  ChunkCard.tsx  ChunkList.tsx  ChunkingParams.tsx
app/components/downloads/: ActionRow.tsx  DownloadScriptButton.tsx
app/components/embeddings/: EmbeddingsSection.tsx
app/components/mongodb/: MongodbSection.tsx
app/components/parsing/: ParsedDocumentView.tsx
app/components/pinecone/: PineconeSection.tsx
app/components/pipeline-forms/: ExcelForm.tsx  OllamaForm.tsx  OpenRouterForm.tsx  VllmForm.tsx
app/components/shared/: ConfigSection.tsx  StatusMessage.tsx  Tooltip.tsx
app/components/sidebar/: AppInfo.tsx  ChromaStatus.tsx  MongodbStatus.tsx  OllamaStatus.tsx  Sidebar.tsx  ThemeToggle.tsx  VllmStatus.tsx
app/components/upload/: FileUploader.tsx  (+1 more)
app/lib/: chroma-server.ts  chunking.ts  cohere.ts  constants.ts  downloads.ts  ollama.ts  openrouter.ts  parsers.ts  pinecone-client.ts  script-generator.ts  store.ts  tokenizer.ts  types.ts  vllm.ts
chunkcanvas/: document_manager.py
chunkcanvas/config/: api_keys.py  constants.py
chunkcanvas/document_processing/: file_processing.py  llamaparse_utils.py
chunkcanvas/interface/: form_handling.py
chunkcanvas/utils/: export_utils.py
chunkcanvas/vector_db/: pinecone_ops.py
scripts/: update-models.ts
(+5 files in other folders)
